@@ -522,9 +522,7 @@ ot_pyinstallcheck_test (MaximumEntropyOrderStatisticsCopula_std)
 ot_pyinstallcheck_test (MaximumLikelihoodFactory_std)
 ot_pyinstallcheck_test (MeixnerDistribution_std)
 ot_pyinstallcheck_test (MeixnerDistributionFactory_std)
-if (Ceres_FOUND OR CMinpack_FOUND)
-ot_pyinstallcheck_test (MethodOfMomentsFactory_std)
-endif ()
+ot_pyinstallcheck_test (MethodOfMomentsFactory_std IGNOREOUT)
 ot_pyinstallcheck_test (MinCopula_std)
 ot_pyinstallcheck_test (MixedHistogramUserDefined_std)
 ot_pyinstallcheck_test (Mixture_std)
