@@ -7,7 +7,7 @@ Estimated TruncatedNormal= TruncatedNormal(mu = -0.013, sigma = 1, a = -3.6, b =
 Default TruncatedNormal= TruncatedNormal(mu = 0, sigma = 1, a = -1, b = 1)
 TruncatedNormal from parameters= TruncatedNormal(mu = 0, sigma = 1, a = -4, b = 4)
 Estimated distribution with default estimator = TruncatedNormal(mu = -0.013, sigma = 1, a = -3.6, b = 3.6)
-Estimated distribution with moments= TruncatedNormal(mu = -0.066, sigma = 1, a = -3.6, b = 3.6)
+Estimated distribution with moments= TruncatedNormal(mu = -0.013, sigma = 1, a = -3.6, b = 3.6)
 Estimated distribution with likelihoodMax.= TruncatedNormal(mu = -0.013, sigma = 1, a = -3.6, b = 3.6)
 distribution= class=TruncatedNormal name=TruncatedNormal dimension=1 mu=0 sigma=1 a=-1 b=4
 Estimated distribution= class=TruncatedNormal name=TruncatedNormal dimension=1 mu=0.0092 sigma=1 a=-1 b=3.3
@@ -18,7 +18,7 @@ Estimated TruncatedNormal= TruncatedNormal(mu = 0.0092, sigma = 1, a = -1, b = 3
 Default TruncatedNormal= TruncatedNormal(mu = 0, sigma = 1, a = -1, b = 1)
 TruncatedNormal from parameters= TruncatedNormal(mu = 0, sigma = 1, a = -1, b = 4)
 Estimated distribution with default estimator = TruncatedNormal(mu = 0.0092, sigma = 1, a = -1, b = 3.3)
-Estimated distribution with moments= TruncatedNormal(mu = 0.01, sigma = 1, a = -1, b = 3.3)
+Estimated distribution with moments= TruncatedNormal(mu = 0.0095, sigma = 1, a = -1, b = 3.3)
 Estimated distribution with likelihoodMax.= TruncatedNormal(mu = 0.0092, sigma = 1, a = -1, b = 3.3)
 distribution= class=TruncatedNormal name=TruncatedNormal dimension=1 mu=0 sigma=1 a=1 b=2
 Estimated distribution= class=TruncatedNormal name=TruncatedNormal dimension=1 mu=-0.09 sigma=1 a=1 b=2
@@ -29,7 +29,7 @@ Estimated TruncatedNormal= TruncatedNormal(mu = -0.09, sigma = 1, a = 1, b = 2)
 Default TruncatedNormal= TruncatedNormal(mu = 0, sigma = 1, a = -1, b = 1)
 TruncatedNormal from parameters= TruncatedNormal(mu = 0, sigma = 1, a = 1, b = 2)
 Estimated distribution with default estimator = TruncatedNormal(mu = -0.09, sigma = 1, a = 1, b = 2)
-Estimated distribution with moments= TruncatedNormal(mu = -0.05, sigma = 1, a = 1, b = 2)
+Estimated distribution with moments= TruncatedNormal(mu = -0.08, sigma = 1, a = 1, b = 2)
 Estimated distribution with likelihoodMax.= TruncatedNormal(mu = -0.09, sigma = 1, a = 1, b = 2)
 distribution= class=TruncatedNormal name=TruncatedNormal dimension=1 mu=0 sigma=1 a=3 b=6
 Estimated distribution= class=TruncatedNormal name=TruncatedNormal dimension=1 mu=-0.072 sigma=1 a=3 b=5
@@ -40,7 +40,7 @@ Estimated TruncatedNormal= TruncatedNormal(mu = -0.072, sigma = 1, a = 3, b = 5)
 Default TruncatedNormal= TruncatedNormal(mu = 0, sigma = 1, a = -1, b = 1)
 TruncatedNormal from parameters= TruncatedNormal(mu = 0, sigma = 1, a = 3, b = 6)
 Estimated distribution with default estimator = TruncatedNormal(mu = -0.072, sigma = 1, a = 3, b = 5)
-Estimated distribution with moments= TruncatedNormal(mu = -0.43, sigma = 1.1, a = 3, b = 5)
+Estimated distribution with moments= TruncatedNormal(mu = -0.047, sigma = 1, a = 3, b = 5)
 Estimated distribution with likelihoodMax.= TruncatedNormal(mu = -0.072, sigma = 1, a = 3, b = 5)
 Build method of moments
 Build method of likelihood maximization
